2024-04-14 (12.27)
	COMMON: Fix bug #149: Problem with big hex numbers in windows
	COMMON: Add new function TRANSPOSE()

2024-04-07 (12.27)
	ANDROID: Implemented "android.request"

2024-02-19 (12.27)
	COMMON: Fix TSAVE bug #205

2024-01-22 (12.27)
	COMMON: Fix linking issue on MSYS2

2024-01-14 (12.27)
	COMMON: Improvements for image.save()

2024-01-13 (12.27)
	COMMON: Serial port improvements.

2024-01-06 (12.27)
	COMMON: Allow modules to return objects with methods that take arguments

2023-12-01 (12.27)
	CONSOLE: Bugfix for image.clip() and image.save()

2023-10-31 (12.27)
	COMMON: Fix: RTRIM changes input string

2023-08-27 (12.27)
	COMMON: Fix parameter number error when calling a unit sub/func
	COMMON: Show a runtime error if a module calls exit()

2023-08-05 (12.27)
	COMMON: Fix building on Cygwin

2023-07-23 (12.27)
	COMMON: Fix for RoundPrecisionBug

2023-07-18 (12.27)
	COMMON: Fix redim regression

2023-06-18 (12.27)
	COMMON: Fix redim regression
	PLUGINS: Added mechanism for cleaning up resources when the associated map falls out of scope

2023-05-12 (12.27)
	CONSOLE: Fix image save
	ANDROID: Fix download error when there are duplicate scratch.bas files

2023-05-14 (12.27)
	COMMON: Fix bug: LINEQN tolerance
	COMMON: Fix floating-point number round-precision bug when converting a floating-point number to string.

2023-03-26 (12.26)
	ANDROID: Fix setenv error #187
	ANDROID: update web UI dependencies
	COMMON: Fix bug in BGETC when using sockets (Joe7M)
	COMMON: Fix EQV bug. "0 EQV 0" will return correct result "1" (Joe7M)
	COMMON: Fix: "0 IMP 0" returns now correct result 1 (Joe7M)
	UI: FLTK and SDL version numbers now included in SBVER
	UI: fix editor display issues with DOS line-endings

2023-02-19 (12.26)
	SDL: Fixed an issue with window resizing #144
	COMMON: Fixed "make dist" so it can produce a package with all internal dependencies

2023-01-20 (12.26)
	COMMON: Fixed DIM lower bound (Joe7M)
	COMMON: RGB and RGBF now clamp parameters (Joe7M)