@@ -7,9 +7,9 @@ android {
   // can override some attributes in main/AndroidManifest.xml
   defaultConfig {
     applicationId 'net.sourceforge.smallbasic'
-    minSdkVersion 21
+    minSdkVersion 23
     targetSdkVersion 34
-    versionCode 64
+    versionCode 66
     versionName '12.28'
     resourceConfigurations += ['en']
   }
